--- a/Login Form/index.html
+++ b/Login Form/index.html
@@ -12,6 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
     form {
       width: 300px;
@@ -34,7 +35,7 @@
       color: white;
       padding: 10px 10px;
       border: none;
-      border-radius: 20px;
+      border-radius: 10px;
       cursor: pointer;
       width: 300px;
       margin-top: 20px;
@@ -42,12 +43,15 @@
     }
     button:hover{
         background-color:green;
+
     }
     #username{
-      border-radius: 20px;
+      border-radius: 10px;
+      border: #ccc;
     }
     #password{
-      border-radius: 20px;
+      border-radius: 10px;
+      border: #ccc;
     }
   </style>
 </head>
